# solidity-lsp-benchmarks

./: .gitignore  CRATE_README.md  Cargo.toml  DOCS.md  LICENSE  README.md  benchmark.yaml  counter.yaml
.github/workflows/: build.yml
benchmarks/: 2026-02-13T01-45-26Z.json  2026-02-13T02-43-22Z.json  2026-02-13T03-23-07Z.json  2026-02-13T03-44-14Z.json  2026-02-13T03-53-07Z.json  2026-02-13T04-17-56Z.json  2026-02-13T04-55-35Z.json  2026-02-13T06-27-56Z.json
benchmarks/counter/: 2026-02-13T09-58-10Z.json  2026-02-13T10-03-59Z.json  README.md
benchmarks/diagnostics/: 2026-02-13T02-16-23Z.json
benchmarks/spawn/: 2026-02-12T22-41-10Z.json
benchmarks/v4-core/: 2026-02-13T09-39-12Z.json  2026-02-13T09-46-45Z.json  2026-02-13T09-53-03Z.json  2026-02-13T10-31-12Z.json  README.md
examples/: Counter.sol  benchmark.template.yaml
src/: gen_analysis.rs  gen_competition.rs  gen_delta.rs  gen_readme.rs  gen_report.rs  main.rs
