[package]
name = "solidity-lsp-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "gen-readme"
path = "src/gen_readme.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indicatif = "0.17"
console = "0.15"
