[package]
name = "lsp-bench"
version = "0.2.6"
edition = "2021"
description = "Benchmark framework for Language Server Protocol (LSP) servers"
license = "MIT"
repository = "https://github.com/mmsaki/solidity-lsp-benchmarks"
keywords = ["lsp", "benchmark", "language-server"]
categories = ["development-tools", "command-line-utilities"]
readme = "CRATE_README.md"
exclude = ["v4-core/", "examples/cache/", "examples/out/", "examples/soljson-latest.js", "benchmarks/", "article-*"]

[[bin]]
name = "lsp-bench"
path = "src/main.rs"

[[bin]]
name = "gen-report"
path = "src/gen_report.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indicatif = "0.17"
console = "0.15"
sysinfo = "0.30"
